<?xml version="1.0"?>
<package>
  <name>powerboard_pcl</name>
  <version>1.0.0</version>
  <description>The powerboard_pcl package</description>

  <maintainer email="hongalan2016@u.northwestern.edu">hongalan</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/hongalan/powerboard</url>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>rosserial_python</run_depend>  
  <run_depend>map_server</run_depend>
  <run_depend>laser_scan_matcher</run_depend>
  <run_depend>tf</run_depend>

<!-- for pcl scripts not currently committed -->
  <!-- <build_depend>pcl_ros</build_depend> -->
  <!-- <build_depend>pcl_conversions</build_depend> -->
  <!-- <build_depend>libpcl-all-dev</build_depend> -->

  <!-- <run_depend>pcl</run_depend> -->
  <!-- <run_depend>pcl_conversions</run_depend> -->
  <!-- <run_depend>libpcl-all</run_depend> -->

  <test_depend>pcl_ros</test_depend>
  <test_depend>pcl_conversions</test_depend>
  <test_depend>pcl</test_depend>
  <test_depend>pcl_conversions</test_depend>
  <test_depend>libpcl-all</test_depend>

</package>